添加二维码

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -22,7 +22,7 @@ body {
   margin: 0 auto;
   color: #213547;
   font-size: 14rem;
-  background: #e1f1fc url("../img/footbgone.png") no-repeat center bottom;
+  background: rgb(213, 240, 251) url("../img/footbgone.png") no-repeat center bottom;
   background-size: 100%;
 }
 
